# 2fa

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accounts.rs  barcode.rs  lib.rs  main.rs  qr_clipboard.rs  totp.rs
src/components/Code/: index.module.scss  index.tsx
src/pages/Setting/: index.module.scss  index.tsx
