[package]
name = "two-factor-auth"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "two-factor-auth"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.11.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quircs = "0.10"
base32 = "0.5"
hmac = "0.12"
sha1 = "0.10"
tauri-plugin-barcode-scanner = "2"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3"


